--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
    
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INCLUSSÃO E ACESSIBILIDADE</a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INCLUSÃO E ACESSIBILIDADE</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ESTATUDO DO IDOSO</a>
     <a href="#idoso" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TRABALHO SOBRE O ESTATUDO DO IDOSO</a>
   
@@ -52,7 +52,7 @@ body {font-family: "Lato", sans-serif}
 
  
   <div class="w3-container w3-content  w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide w3-center">INCLUSSÃO E ACESSIBILIDADE</h2>
+    <h2 class="w3-wide w3-center">INCLUSÃO E ACESSIBILIDADE</h2>
     <h4 class="w3-center">O que é inclusão?</h4>
     <p class="">Inclusão é o ato de incluir e acrescentar, ou seja, adicionar coisas ou pessoas em grupos e núcleos que antes não faziam parte.
     Socialmente, a inclusão representa um ato de igualidade entre os diferentes indivíduos que habitam determinada sociedade. Assim, esta ação permite que todos tenham o direito de integrar e participar das várias dimensões de seu ambiente, sem sofrer qualquer tipo de discriminação e preconceito.
